[prep] More robust campaign initialization
`Campaign` now has a "primary constructor" that all other constructors call. This constructor initializes everything
explicitly. `Campaign#readResolve()` and `Campaign#fromDto()` also use the primary constructor to guarantee proper
initialization.

`Campaign`'s transient fields are now at the end of the list of fields, with constructors right after that.